@@ -1,4 +1,10 @@
-2007-09-36  Jonh Wendell  <jwendell@gnome.org>
+2007-09-06  Jonh Wendell  <jwendell@gnome.org>
+
+	* src/vinagre-window.c
+	* src/vinagre-window-private.h:
+	  - Show tooltips on statusbar
+
+2007-09-06  Jonh Wendell  <jwendell@gnome.org>
 
 	* src/vinagre-tab.[hc]
 	* src/vinagre-commands.[hc]
